--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -36,7 +36,7 @@
       <ul class="navbar-nav  mb-2 mb-lg-0">
         <% if user_signed_in? %>
           <%= link_to "Edit Account", edit_user_registration_path, class:"nav-link", style:"margin-right: 20px;" %>
-          <%= link_to "Sign Out", destroy_user_session_path, class:"nav-link" %>
+          <%= link_to "Sign Out", destroy_user_session_path, :method => :delete, class:"nav-link" %>
         <% else %>
           <%= link_to "Sign Up", new_user_registration_path, class:"nav-link" %>
         <% end %>
