--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <%= link_to "Home", root_path, class:"navbar-brand" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,26 +17,24 @@
             <%= link_to "View my Posts", posts_myposts_path, class:"nav-link" %>
           </li>
         <% end %>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
       </ul>
       <%# <form class="d-flex " role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form> %>
-      <ul class="navbar-nav  mb-2 mb-lg-0">
+      <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
-          <%= link_to "Edit Account", edit_user_registration_path, class:"nav-link", style:"margin-right: 20px;" %>
-          <%= link_to "Sign Out", destroy_user_session_path, :method => :delete, class:"nav-link" %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Me
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+              <li><%= link_to "View my profile", current_user, class:"dropdown-item"%></li>
+              <li><%= link_to "Edit Account", edit_user_registration_path, class:"dropdown-item", style:"margin-right: 20px;" %></li>
+              <li><hr class="dropdown-divider"></li>
+              <%= link_to "Sign Out", destroy_user_session_path, :method => :delete, class:"dropdown-item" %>
+            </ul>
+          </li>
         <% else %>
           <%= link_to "Sign Up", new_user_registration_path, class:"nav-link" %>
         <% end %>
